<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ChatActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/refresh"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:contentInsetStartWithNavigation="0dp"
                app:menu="@menu/chat_menu"
                style="@style/Widget.MaterialComponents.Toolbar.Primary">

            <androidx.cardview.widget.CardView
                    android:id="@+id/avatarCard"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:cardCornerRadius="24dp">

                <ImageView
                        android:id="@+id/imageAvatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_person_24"
                        android:contentDescription="@string/user_avatar"/>

            </androidx.cardview.widget.CardView>

            <TextView
                    android:id="@+id/chat_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_marginStart="6dp"
                    android:text="@string/app_name"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constrainedHeight="true"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            app:layout_constraintBottom_toTopOf="@id/chatbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chats"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chatbox"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/refresh"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/message"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/sendCard"
                app:placeholderText="@string/chat_box_hint"
                android:layout_marginHorizontal="8dp"
                app:boxCornerRadiusTopStart="32dp"
                app:boxCornerRadiusTopEnd="32dp"
                app:boxCornerRadiusBottomStart="32dp"
                app:boxCornerRadiusBottomEnd="32dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/messageInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:inputType="textMultiLine"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
                android:id="@+id/sendCard"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                app:cardCornerRadius="32dp"
                app:cardBackgroundColor="?attr/colorPrimary">

            <ImageButton
                    android:id="@+id/send"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_send_24"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/send_message"
                    android:tint="@color/white"
                    android:scaleType="centerCrop"
                    />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
